tests/unsafe_getters_setters/unsafe_getters_setters.exp
Error ------------------------------------------------------------------------------------ unsafe_getters_setters.js:6:3

Getters and setters can have side effects and are unsafe. [unsafe-getters-setters]

   6|   get a() { return 4; },
        ^^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------ unsafe_getters_setters.js:7:3

Getters and setters can have side effects and are unsafe. [unsafe-getters-setters]

   7|   set b(x: number) { this.c = x; },
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- unsafe_getters_setters.js:7:22

Cannot reference `this` from within method `b` [1]. For safety, Flow restricts access to `this` inside object methods
since these methods may be unbound and rebound. Consider replacing the reference to `this` with the name of the object,
or rewriting the object as a class. [object-this-reference]

   unsafe_getters_setters.js:7:22
   7|   set b(x: number) { this.c = x; },
                           ^^^^

References:
   unsafe_getters_setters.js:7:3
   7|   set b(x: number) { this.c = x; },
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------- unsafe_getters_setters.js:12:3

Getters and setters can have side effects and are unsafe. [unsafe-getters-setters]

   12|   get a(): number { return 4; }
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- unsafe_getters_setters.js:13:3

Getters and setters can have side effects and are unsafe. [unsafe-getters-setters]

   13|   set b(x: number) { this.c = x; }
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- unsafe_getters_setters.js:18:3

Getters and setters can have side effects and are unsafe. [unsafe-getters-setters]

   18|   get a(): number,
         ^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- unsafe_getters_setters.js:19:3

Getters and setters can have side effects and are unsafe. [unsafe-getters-setters]

   19|   set b(x: number): void,
         ^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- unsafe_getters_setters.js:24:3

Getters and setters can have side effects and are unsafe. [unsafe-getters-setters]

   24|   get a(): number;
         ^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- unsafe_getters_setters.js:25:3

Getters and setters can have side effects and are unsafe. [unsafe-getters-setters]

   25|   set b(x: number): void;
         ^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- unsafe_getters_setters.js:31:3

Getters and setters can have side effects and are unsafe. [unsafe-getters-setters]

   31|   get b(): number;
         ^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- unsafe_getters_setters.js:32:3

Getters and setters can have side effects and are unsafe. [unsafe-getters-setters]

   32|   set c(x: number): void;
         ^^^^^^^^^^^^^^^^^^^^^^



Found 11 errors
